# advent_of_code_2023_rs

./: Cargo.toml  README.md
.cargo/: config.toml
data/examples/: 03.txt
src/: cartesian.rs  defaultmap.rs  lib.rs
