[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
linked_list_remove = []
test_lib = []

[dependencies]
pico-args = "0.5.0"
itertools = { version = "0.12"}
regex = { version = "1.10.2"}
derive_more = "0.99.17"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true